--- a/Lekce1/lekce1.ipynb
+++ b/Lekce1/lekce1.ipynb
@@ -2,34 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a737f76",
+   "id": "6548a42f",
    "metadata": {},
    "source": [
-    "# Python Datové struktury – cvičení"
+    "# Python Datové struktury – cvičení\n",
+    "\n",
+    "> **Verze pro studenty** - GitHub Repository\n",
+    "\n",
+    "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)\n",
+    "[![Python 3.8+](https://img.shields.io/badge/python-3.8+-blue.svg)](https://www.python.org/downloads/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c965931f",
+   "id": "9b9e8612",
    "metadata": {},
    "source": [
-    "## Úvod\n",
+    "## 📚 Úvod\n",
     "\n",
-    "V této lekci si zopakujeme základní datové struktury v Pythonu:\n",
+    "Vítej v praktických cvičeních Python datových struktur! V této lekci si procvičíš základní datové struktury:\n",
+    "\n",
     "- **Seznamy (List)** - měnitelné, uspořádané kolekce\n",
     "- **N-tice (Tuple)** - neměnitelné, uspořádané kolekce  \n",
     "- **Množiny (Set)** - neměnitelné, neuspořádané kolekce unikátních prvků\n",
     "- **Slovníky (Dict)** - měnitelné kolekce párů klíč-hodnota\n",
     "\n",
-    "Každá sekce obsahuje krátké připomenutí syntaxe a praktické cvičení."
+    "### 🎯 Cíle lekce:\n",
+    "1. Zopakovat si syntaxi základních datových struktur\n",
+    "2. Procvičit praktické použití na reálných příkladech\n",
+    "3. Naučit se kdy použít kterou strukturu\n",
+    "\n",
+    "### 💡 Jak na to:\n",
+    "- Přečti si popis úkolu\n",
+    "- Použij připomenutí syntaxe\n",
+    "- Napiš svůj kód do prázdné buňky\n",
+    "- Spusť kód a zkontroluj výsledek"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42beca9a",
+   "id": "0305f4cc",
    "metadata": {},
    "source": [
-    "### Připomenutí syntaxe pro seznamy:\n",
+    "## 📋 1. Seznamy (List)\n",
+    "\n",
+    "### 💡 Připomenutí syntaxe:\n",
     "```python\n",
     "# Vytvoření seznamu\n",
     "muj_seznam = [\"prvek1\", \"prvek2\", \"prvek3\"]\n",
@@ -44,83 +61,48 @@
     "len(muj_seznam)                    # délka seznamu\n",
     "muj_seznam[0]                      # první prvek\n",
     "muj_seznam[-1]                     # poslední prvek\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b48ed4c3",
-   "metadata": {},
-   "source": [
-    "## 1. Seznamy (List)\n",
+    "```\n",
     "\n",
-    "### Úkoly:\n",
-    "1. Vytvoř seznam pěti oblíbených filmů.  \n",
-    "2. Přidej do seznamu jeden nový film.  \n",
-    "3. Smaž jeden film ze seznamu.  \n",
-    "4. Seřaď seznam podle abecedy.  \n",
-    "5. Vypiš první a poslední film."
+    "### 🎯 Úkoly:\n",
+    "1. Vytvoř seznam pěti oblíbených filmů\n",
+    "2. Přidej do seznamu jeden nový film\n",
+    "3. Smaž jeden film ze seznamu\n",
+    "4. Seřaď seznam podle abecedy\n",
+    "5. Vypiš první a poslední film"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc10ba4",
+   "id": "417ee899",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sem napiš svůj kód"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b885955b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ukázkové řešení - odkomentuj a spusť:\n",
+    "# 📝 Tvůj kód zde:\n",
     "\n",
     "# 1. Vytvoř seznam pěti oblíbených filmů\n",
-    "# filmy = [\"Matrix\", \"Interstellar\", \"Inception\", \"Avatar\", \"Star Wars\"]\n",
-    "# print(\"Původní seznam:\", filmy)\n",
+    "\n",
     "\n",
     "# 2. Přidej do seznamu jeden nový film\n",
-    "# filmy.append(\"Dune\")\n",
-    "# print(\"Po přidání:\", filmy)\n",
+    "\n",
     "\n",
     "# 3. Smaž jeden film ze seznamu\n",
-    "# filmy.remove(\"Avatar\")\n",
-    "# print(\"Po smazání Avatar:\", filmy)\n",
+    "\n",
     "\n",
     "# 4. Seřaď seznam podle abecedy\n",
-    "# filmy.sort()\n",
-    "# print(\"Seřazený seznam:\", filmy)\n",
     "\n",
-    "# 5. Vypiš první a poslední film\n",
-    "# print(\"První film:\", filmy[0])\n",
-    "# print(\"Poslední film:\", filmy[-1])"
+    "\n",
+    "# 5. Vypiš první a poslední film"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eeddd5ca",
+   "id": "45fee3c6",
    "metadata": {},
    "source": [
-    "## 2. N-tice (Tuple)\n",
+    "## 📦 2. N-tice (Tuple)\n",
     "\n",
-    "### Úkoly:\n",
-    "1. Vytvoř n-tici se souřadnicemi `(x, y)`.  \n",
-    "2. Pokus se změnit hodnotu – co se stane?  \n",
-    "3. Vytvoř n-tici s názvem města, počtem obyvatel a státem."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5a93bf3",
-   "metadata": {},
-   "source": [
-    "### Připomenutí syntaxe pro n-tice:\n",
+    "### 💡 Připomenutí syntaxe:\n",
     "```python\n",
     "# Vytvoření n-tice\n",
     "moje_ntice = (1, 2, 3)\n",
@@ -136,68 +118,40 @@
     "\n",
     "# N-tice jsou neměnitelné!\n",
     "# souradnice[0] = 15  # Toto vyvolá chybu!\n",
-    "```"
+    "```\n",
+    "\n",
+    "### 🎯 Úkoly:\n",
+    "1. Vytvoř n-tici se souřadnicemi `(x, y)`\n",
+    "2. Pokus se změnit hodnotu – co se stane?\n",
+    "3. Vytvoř n-tici s názvem města, počtem obyvatel a státem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43e39db4",
+   "id": "a17c4ea3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sem napiš svůj kód"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54aac70b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ukázkové řešení - odkomentuj a spusť:\n",
+    "# 📝 Tvůj kód zde:\n",
     "\n",
     "# 1. Vytvoř n-tici se souřadnicemi (x, y)\n",
-    "# souradnice = (15, 25)\n",
-    "# print(\"Souřadnice:\", souradnice)\n",
-    "# print(\"X:\", souradnice[0], \"Y:\", souradnice[1])\n",
+    "\n",
     "\n",
     "# 2. Pokus se změnit hodnotu – co se stane?\n",
-    "# try:\n",
-    "#     souradnice[0] = 100\n",
-    "# except TypeError as e:\n",
-    "#     print(\"Chyba:\", e)\n",
-    "#     print(\"N-tice jsou neměnitelné!\")\n",
     "\n",
-    "# 3. Vytvoř n-tici s názvem města, počtem obyvatel a státem\n",
-    "# mesto = (\"Praha\", 1280000, \"Česká republika\")\n",
-    "# nazev, obyvatele, stat = mesto  # rozbalení\n",
-    "# print(f\"Město: {nazev}\")\n",
-    "# print(f\"Počet obyvatel: {obyvatele}\")\n",
-    "# print(f\"Stát: {stat}\")"
+    "\n",
+    "# 3. Vytvoř n-tici s názvem města, počtem obyvatel a státem"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "378369ea",
+   "id": "6c7ff1f7",
    "metadata": {},
    "source": [
-    "## 3. Množiny (Set)\n",
+    "## 🔢 3. Množiny (Set)\n",
     "\n",
-    "### Úkoly:\n",
-    "1. Vytvoř množinu jmen, kde se některá jména opakují (např. `[\"Petr\", \"Jana\", \"Petr\", \"Eva\"]`).  \n",
-    "2. Spoj dvě množiny (např. sporty venku a sporty uvnitř).  \n",
-    "3. Najdi průnik dvou množin.  \n",
-    "4. Odstraň jedno jméno ze setu."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c1da33e",
-   "metadata": {},
-   "source": [
-    "### Připomenutí syntaxe pro množiny:\n",
+    "### 💡 Připomenutí syntaxe:\n",
     "```python\n",
     "# Vytvoření množiny\n",
     "moje_mnozina = {1, 2, 3, 4}\n",
@@ -216,74 +170,44 @@
     "moje_mnozina.add(\"nový prvek\")\n",
     "moje_mnozina.remove(\"prvek\")  # vyvolá chybu, pokud prvek neexistuje\n",
     "moje_mnozina.discard(\"prvek\") # nevyvolá chybu\n",
-    "```"
+    "```\n",
+    "\n",
+    "### 🎯 Úkoly:\n",
+    "1. Vytvoř množinu jmen, kde se některá jména opakují (např. `[\"Petr\", \"Jana\", \"Petr\", \"Eva\"]`)\n",
+    "2. Spoj dvě množiny (např. sporty venku a sporty uvnitř)\n",
+    "3. Najdi průnik dvou množin\n",
+    "4. Odstraň jedno jméno ze setu"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f8bea7",
+   "id": "26a6b487",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sem napiš svůj kód"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a46e909d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ukázkové řešení - odkomentuj a spusť:\n",
+    "# 📝 Tvůj kód zde:\n",
     "\n",
     "# 1. Vytvoř množinu jmen, kde se některá jména opakují\n",
-    "# jmena_seznam = [\"Petr\", \"Jana\", \"Petr\", \"Eva\", \"Jana\", \"Tomáš\"]\n",
-    "# jmena_mnozina = set(jmena_seznam)\n",
-    "# print(\"Seznam s duplicity:\", jmena_seznam)\n",
-    "# print(\"Množina (bez duplicit):\", jmena_mnozina)\n",
+    "\n",
     "\n",
     "# 2. Spoj dvě množiny (např. sporty venku a sporty uvnitř)\n",
-    "# sporty_venku = {\"fotbal\", \"tenis\", \"běh\", \"cyklistika\"}\n",
-    "# sporty_vevnitř = {\"basketbal\", \"volejbal\", \"ping-pong\", \"šachy\"}\n",
-    "# vsechny_sporty = sporty_venku | sporty_vevnitř\n",
-    "# print(\"Sporty venku:\", sporty_venku)\n",
-    "# print(\"Sporty uvnitř:\", sporty_vevnitř)\n",
-    "# print(\"Všechny sporty:\", vsechny_sporty)\n",
+    "\n",
     "\n",
     "# 3. Najdi průnik dvou množin\n",
-    "# letni_sporty = {\"fotbal\", \"tenis\", \"běh\", \"plavání\", \"volejbal\"}\n",
-    "# zimni_sporty = {\"hokej\", \"lyžování\", \"běh\", \"volejbal\", \"šachy\"}\n",
-    "# celorocni_sporty = letni_sporty & zimni_sporty\n",
-    "# print(\"Průnik (celoroční sporty):\", celorocni_sporty)\n",
     "\n",
-    "# 4. Odstraň jedno jméno ze setu\n",
-    "# jmena_mnozina.discard(\"Petr\")\n",
-    "# print(\"Po odebrání Petra:\", jmena_mnozina)"
+    "\n",
+    "# 4. Odstraň jedno jméno ze setu"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee9ee79c",
+   "id": "673eb6c3",
    "metadata": {},
    "source": [
-    "## 4. Slovníky (Dict)\n",
+    "## 📖 4. Slovníky (Dict)\n",
     "\n",
-    "### Úkoly:\n",
-    "1. Vytvoř slovník o studentovi, např.:  \n",
-    "   `{ \"jmeno\": \"Tomáš\", \"vek\": 22, \"jazyk\": \"Python\" }`  \n",
-    "2. Přidej nový klíč `mesto`.  \n",
-    "3. Vypiš všechny klíče a hodnoty ve slovníku.  \n",
-    "4. Změň hodnotu klíče `jazyk`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36a998f1",
-   "metadata": {},
-   "source": [
-    "### Připomenutí syntaxe pro slovníky:\n",
+    "### 💡 Připomenutí syntaxe:\n",
     "```python\n",
     "# Vytvoření slovníku\n",
     "muj_slovnik = {\"klíč1\": \"hodnota1\", \"klíč2\": \"hodnota2\"}\n",
@@ -310,55 +234,44 @@
     "# Odebrání prvků\n",
     "del muj_slovnik[\"klíč1\"]\n",
     "hodnota = muj_slovnik.pop(\"klíč2\", \"výchozí\")\n",
-    "```"
+    "```\n",
+    "\n",
+    "### 🎯 Úkoly:\n",
+    "1. Vytvoř slovník o studentovi, např.: `{ \"jmeno\": \"Tomáš\", \"vek\": 22, \"jazyk\": \"Python\" }`\n",
+    "2. Přidej nový klíč `mesto`\n",
+    "3. Vypiš všechny klíče a hodnoty ve slovníku\n",
+    "4. Změň hodnotu klíče `jazyk`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d92d7302",
+   "id": "71cf8f54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sem napiš svůj kód"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b6d7893",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ukázkové řešení - odkomentuj a spusť:\n",
+    "# 📝 Tvůj kód zde:\n",
     "\n",
     "# 1. Vytvoř slovník o studentovi\n",
-    "# student = {\"jmeno\": \"Tomáš\", \"vek\": 22, \"jazyk\": \"Python\"}\n",
-    "# print(\"Původní slovník:\", student)\n",
+    "\n",
     "\n",
     "# 2. Přidej nový klíč mesto\n",
-    "# student[\"mesto\"] = \"Praha\"\n",
-    "# print(\"Po přidání města:\", student)\n",
+    "\n",
     "\n",
     "# 3. Vypiš všechny klíče a hodnoty ve slovníku\n",
-    "# print(\"\\nKlíče:\", list(student.keys()))\n",
-    "# print(\"Hodnoty:\", list(student.values()))\n",
-    "# print(\"\\nVšechny páry klíč-hodnota:\")\n",
-    "# for klic, hodnota in student.items():\n",
-    "#     print(f\"  {klic}: {hodnota}\")\n",
     "\n",
-    "# 4. Změň hodnotu klíče jazyk\n",
-    "# student[\"jazyk\"] = \"JavaScript\"\n",
-    "# print(\"\\nPo změně jazyka:\", student)"
+    "\n",
+    "# 4. Změň hodnotu klíče jazyk"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7cec0e6b",
+   "id": "1e3bfdb9",
    "metadata": {},
    "source": [
-    "## 5. Mini projekt – Knihy\n",
+    "## 🚀 5. Mini projekt – Knihy\n",
     "\n",
+    "### 📖 Zadání:\n",
     "Máš seznam knih uložených jako seznam slovníků:\n",
     "\n",
     "```python\n",
@@ -369,88 +282,69 @@
     "]\n",
     "```\n",
     "\n",
-    "### Úkoly:\n",
-    "1. Přidej novou knihu.  \n",
-    "2. Vypiš všechny názvy knih.  \n",
-    "3. Najdi všechny knihy vydané po roce 1950."
+    "### 🎯 Úkoly:\n",
+    "1. Přidej novou knihu\n",
+    "2. Vypiš všechny názvy knih\n",
+    "3. Najdi všechny knihy vydané po roce 1950\n",
+    "4. **Bonus:** Seřaď knihy podle roku vydání"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45afe29b",
+   "id": "79211e27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sem napiš svůj kód"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfec4186",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ukázkové řešení - odkomentuj a spusť:\n",
+    "# 📝 Tvůj kód zde:\n",
     "\n",
-    "# knihy = [\n",
-    "#     {\"nazev\": \"1984\", \"autor\": \"Orwell\", \"rok\": 1949},\n",
-    "#     {\"nazev\": \"Hobit\", \"autor\": \"Tolkien\", \"rok\": 1937},\n",
-    "#     {\"nazev\": \"Harry Potter\", \"autor\": \"Rowling\", \"rok\": 1997}\n",
-    "# ]\n",
-    "\n",
-    "# print(\"Původní seznam knih:\")\n",
-    "# for kniha in knihy:\n",
-    "#     print(f\"- {kniha}\")\n",
+    "# Nejdříve vytvoř seznam knih\n",
+    "knihy = [\n",
+    "    {\"nazev\": \"1984\", \"autor\": \"Orwell\", \"rok\": 1949},\n",
+    "    {\"nazev\": \"Hobit\", \"autor\": \"Tolkien\", \"rok\": 1937},\n",
+    "    {\"nazev\": \"Harry Potter\", \"autor\": \"Rowling\", \"rok\": 1997}\n",
+    "]\n",
     "\n",
     "# 1. Přidej novou knihu\n",
-    "# nova_kniha = {\"nazev\": \"Dune\", \"autor\": \"Herbert\", \"rok\": 1965}\n",
-    "# knihy.append(nova_kniha)\n",
-    "# print(f\"\\nPo přidání: {nova_kniha}\")\n",
+    "\n",
     "\n",
     "# 2. Vypiš všechny názvy knih\n",
-    "# print(\"\\nVšechny názvy knih:\")\n",
-    "# for kniha in knihy:\n",
-    "#     print(f\"- {kniha['nazev']}\")\n",
+    "\n",
     "\n",
     "# 3. Najdi všechny knihy vydané po roce 1950\n",
-    "# print(\"\\nKnihy vydané po roce 1950:\")\n",
-    "# for kniha in knihy:\n",
-    "#     if kniha[\"rok\"] > 1950:\n",
-    "#         print(f\"- {kniha['nazev']} ({kniha['rok']})\")\n",
     "\n",
-    "# Bonus: Seřaď knihy podle roku vydání\n",
-    "# knihy_serazene = sorted(knihy, key=lambda k: k[\"rok\"])\n",
-    "# print(\"\\nKnihy seřazené podle roku:\")\n",
-    "# for kniha in knihy_serazene:\n",
-    "#     print(f\"- {kniha['nazev']} - {kniha['autor']} ({kniha['rok']})\")"
+    "\n",
+    "# 4. Bonus: Seřaď knihy podle roku vydání"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88df4d52",
+   "id": "09e0a6ab",
    "metadata": {},
    "source": [
-    "## Shrnutí\n",
-    "\n",
-    "Gratulace! Dokončil/a jsi opakování základních datových struktur v Pythonu. Zde je rychlé shrnutí:\n",
+    "## 🎉 Shrnutí\n",
     "\n",
     "### Kdy použít kterou strukturu?\n",
     "\n",
     "| Struktura | Kdy použít | Příklad použití |\n",
     "|-----------|------------|-----------------|\n",
-    "| **List** | Potřebuješ uspořádanou, měnitelnou kolekci | Seznam úkolů, výsledky testů |\n",
-    "| **Tuple** | Potřebuješ neměnitelná data, souřadnice | GPS souřadnice, RGB barvy |\n",
-    "| **Set** | Potřebuješ unikátní prvky, rychlé vyhledávání | Seznam unikátních návštěvníků |\n",
-    "| **Dict** | Potřebuješ párovat klíče s hodnotami | Databáze studentů, konfigurace |\n",
+    "| **📋 List** | Potřebuješ uspořádanou, měnitelnou kolekci | Seznam úkolů, výsledky testů |\n",
+    "| **📦 Tuple** | Potřebuješ neměnitelná data, souřadnice | GPS souřadnice, RGB barvy |\n",
+    "| **🔢 Set** | Potřebuješ unikátní prvky, rychlé vyhledávání | Seznam unikátních návštěvníků |\n",
+    "| **📖 Dict** | Potřebuješ párovat klíče s hodnotami | Databáze studentů, konfigurace |\n",
     "\n",
     "### Klíčové vlastnosti:\n",
     "\n",
     "- **Seznamy**: uspořádané, měnitelné, povolovány duplicity\n",
     "- **N-tice**: uspořádané, neměnitelné, povolovány duplicity  \n",
     "- **Množiny**: neuspořádané, měnitelné (ale prvky neměnitelné), žádné duplicity\n",
-    "- **Slovníky**: uspořádané (od Python 3.7+), měnitelné, unikátní klíče"
+    "- **Slovníky**: uspořádané (od Python 3.7+), měnitelné, unikátní klíče\n",
+    "\n",
+    "### 🚀 Další kroky:\n",
+    "- Procvič si list comprehensions: `[x**2 for x in range(10)]`\n",
+    "- Zkus dict comprehensions: `{k: v**2 for k, v in dict.items()}`\n",
+    "- Nauč se set operations pro pokročilé operace s množinami\n",
+    "- Prozkoumej collections modul pro pokročilé datové struktury"
    ]
   }
  ],
