added data in csv

--- a/ADT 2025/Modul_1.ipynb
+++ b/ADT 2025/Modul_1.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "# Modul 1: Cvičení 01 - Zadání úkolu\n",
     "\n",
-    "Cílem tohoto úkolu je vytvořit program v Pythonu, který analyzuje velký datový soubor (CSV) s informacemi o osobách a jejich platech.\n",
+    "Cílem tohoto úkolu je vytvořit program v Pythonu, který analyzuje velký datový soubor ([CSV](https://liks.fav.zcu.cz/adt/exam/service/download-data?filename=data-salaries-years-100Ksh.csv)) s informacemi o osobách a jejich platech.\n",
     "\n",
     "## Hlavní úkoly:\n",
     "\n",
@@ -197,21 +197,7 @@
     "### 2. Kontrola vstupů\n",
     "Před zpracováním ověřit, že:\n",
     "- Program dostal správný počet argumentů.\n",
-    "- Zadaný soubor existuje (použij `os.path.exists`).\n",
-    "\n",
-    "### 3. Zpracování dat\n",
-    "- Vytvořit třídu (např. `Person`) pro reprezentaci jednoho záznamu (osoby).\n",
-    "- Napsat funkci (např. `load_data_file`), která soubor otevře (se správným kódováním `utf-8`), přečte ho řádek po řádku a přeskočí hlavičku.\n",
-    "- Během čtení ošetřit chyby v datech (např. špatný počet sloupců, nečíselné hodnoty pro rok nebo plat). Chybné řádky přeskočit a informovat o tom uživatele.\n",
-    "- Funkce pro načítání by měla přijímat parametr `wanted_year` a načíst do paměti pouze osoby z daného roku.\n",
-    "\n",
-    "### 4. Výpočty\n",
-    "- Vytvořit funkci `count_average_salary`, která ze seznamu osob spočítá průměrný plat.\n",
-    "- **(Bonus)** Vytvořit funkci `count_median_salary` pro výpočet mediánu platu.\n",
-    "\n",
-    "### 5. Výstup\n",
-    "- Nejprve spočítat a vypsat rozdíl v průměrné mzdě mezi lety 2014 a 2015.\n",
-    "- Poté spustit smyčku, která se uživatele opakovaně ptá na rok (`input()`), načte data pro tento rok a vypíše průměrný plat a medián."
+    "- Zadaný soubor existuje (použij `os.path.exists`)."
    ]
   },
   {
